[추가][회원가입 기능 추가]

--- a/views/join.ejs
+++ b/views/join.ejs
@@ -11,7 +11,7 @@
 <body>
     <section class="join_sec user_content">
         <div class="inner_sec">
-            <form action="" method="">
+            <form action="/join" method="post">
                 <p>Join</p>
                 <label>
                     이름 <input type="text" name="userName" placeholder="최대 10자" required>
@@ -25,7 +25,7 @@
                 </label>
                 <label>
                     비밀번호 확인 
-                    <input type="password" name="userPw" maxlength="16" placeholder="최대 16자" required>
+                    <input type="password" name="userPw02" maxlength="16" placeholder="최대 16자" required>
                 </label>
                 <button type="submit">회원가입</button>
             </form>
