--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,6 +20,9 @@
                     비밀번호 
                     <input type="password" name="userPw" maxlength="16" placeholder="최대 16자" required>
                 </label>
+                <div class="join_box">
+                    <a href="/join">회원가입</a>
+                </div>
                 <button type="submit">로그인</button>
             </form>
         </div>
